--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,11 +1,14 @@
 {
   "dependencies": {
-    "com.unity.analytics": "3.2.2",
-    "com.unity.collab-proxy": "1.2.15",
-    "com.unity.package-manager-ui": "2.0.7",
-    "com.unity.postprocessing": "2.1.7",
-    "com.unity.purchasing": "2.0.3",
+    "com.unity.burst": "1.5.0-pre.4",
+    "com.unity.ide.rider": "2.0.7",
+    "com.unity.ide.visualstudio": "2.0.7",
+    "com.unity.ide.vscode": "1.2.3",
+    "com.unity.postprocessing": "3.0.1",
+    "com.unity.test-framework": "1.1.22",
+    "com.unity.ugui": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
+    "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
     "com.unity.modules.assetbundle": "1.0.0",
     "com.unity.modules.audio": "1.0.0",
